Fixed text wrapping

--- a/web/frontend/trade-mind/src/pages/Home.css
+++ b/web/frontend/trade-mind/src/pages/Home.css
@@ -25,6 +25,10 @@
 .custom-shape-divider-bottom-1708470298 .shape-fill {
     fill: #443A90;
 }
+
+.home-page-block-text {
+    width: 50%;
+}
 /* Wave divider */
 @media(max-width:850px) {
     .wave-container::before {    
@@ -157,7 +161,8 @@
 
 .home-page-row-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
     max-width: 1500px;
     margin: 0 auto;
 }
